SubActivity change Fragment add

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CalendarRecyclerView">
         <activity
-            android:name=".MonthCalendarActivity"
+            android:name=".PreAndNextMonthCalendarActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
