--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/my_icon3"
+        android:icon="@mipmap/blue1"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/my_icon3"
+        android:roundIcon="@mipmap/blue1"
         android:supportsRtl="true"
         android:theme="@style/Theme.CalendarRecyclerView">
         <activity
